--- a/morrisons_store_finder/tsconfig.json
+++ b/morrisons_store_finder/tsconfig.json
@@ -18,7 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["google.maps"],             // add this
+    "typeRoots": ["./node_modules/@types","./src/types"]
   },
   "include": [
     "src"
