--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,3 @@
-# This is an example Starter pipeline configuration
-# Use a skeleton to build, test and deploy using manual and parallel steps
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-
 image: node:18
 
 definitions:
@@ -13,39 +8,41 @@ pipelines:
   branches:
     main:
       - step:
-          name: Build
+          name: Build (subfolder)
           caches:
             - npm
           script:
-            - npm ci
+            - cd morrisons_store_finder
+            - npm install --silent --no-audit
             - npm run build
       - step:
           name: Deploy to S3
           deployment: production
           script:
+            # deploy the build produced under morrisons_store_finder/build
             - pipe: atlassian/aws-s3-deploy:1.1.0
               variables:
                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
                 S3_BUCKET: $S3_BUCKET
-                LOCAL_PATH: 'build'
+                LOCAL_PATH: 'morrisons_store_finder/build'
                 ACL: 'public-read'
                 EXTRA_ARGS: '--delete'
                 CACHE_CONTROL: 'max-age=31536000, public'
                 # Optional: invalidate CloudFront distribution after deploy
                 # CLOUDFRONT_DISTRIBUTION_ID: $CLOUDFRONT_DISTRIBUTION_ID
 
-  # optional manual deployment for other branches/tags
   custom:
     deploy-production:
       - step:
-          name: Build
+          name: Build (subfolder)
           image: node:18
           caches:
             - npm
           script:
-            - npm ci
+            - cd morrisons_store_finder
+            - npm install --silent --no-audit
             - npm run build
       - step:
           name: Deploy to S3 (manual)
@@ -57,7 +54,7 @@ pipelines:
                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
                 S3_BUCKET: $S3_BUCKET
-                LOCAL_PATH: 'build'
+                LOCAL_PATH: 'morrisons_store_finder/build'
                 ACL: 'public-read'
                 EXTRA_ARGS: '--delete'
                 CACHE_CONTROL: 'max-age=31536000, public'
