--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,51 +13,32 @@ pipelines:
             - npm
           script:
             - cd morrisons_store_finder
-            - npm install --silent --no-audit
+            # install deps without optional native modules that may require kernel access
+            - npm install --silent --no-audit --no-optional
+            # avoid CRA treating warnings as errors in CI
             - CI=false npm run build
           artifacts:
             - morrisons_store_finder/build/**
       - step:
-          name: Deploy to S3
+          name: Deploy to Vercel
           deployment: production
           script:
-            - pipe: atlassian/aws-s3-deploy:1.1.0
-              variables:
-                AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-                AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-                S3_BUCKET: $S3_BUCKET
-                LOCAL_PATH: 'morrisons_store_finder/build'
-                ACL: 'public-read'
-                EXTRA_ARGS: '--delete'
-                CACHE_CONTROL: 'max-age=31536000, public'
-                CLOUDFRONT_DISTRIBUTION_ID: $CLOUDFRONT_DISTRIBUTION_ID
-
+            - cd morrisons_store_finder
+            # use npx to run vercel CLI without global install
+            - npx --yes vercel --version
+            # deploy to Vercel; requires VERCEL_TOKEN (set in repo variables)
+            - npx --yes vercel --token $VERCEL_TOKEN --prod --confirm
+          
   custom:
-    deploy-production:
+    deploy-vercel:
       - step:
-          name: Build (subfolder)
+          name: Deploy (manual) to Vercel
           image: node:18
           caches:
             - npm
           script:
             - cd morrisons_store_finder
-            - npm install --silent --no-audit
+            - npm install --silent --no-audit --no-optional
             - CI=false npm run build
-          artifacts:
-            - morrisons_store_finder/build/**
-      - step:
-          name: Deploy to S3 (manual)
-          deployment: production
-          script:
-            - pipe: atlassian/aws-s3-deploy:1.1.0
-              variables:
-                AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-                AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-                S3_BUCKET: $S3_BUCKET
-                LOCAL_PATH: 'morrisons_store_finder/build'
-                ACL: 'public-read'
-                EXTRA_ARGS: '--delete'
-                CACHE_CONTROL: 'max-age=31536000, public'
-                CLOUDFRONT_DISTRIBUTION_ID: $CLOUDFRONT_DISTRIBUTION_ID
+            - npx --yes vercel --version
+            - npx --yes vercel --token $VERCEL_TOKEN --prod --confirm
