bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,6 +17,7 @@ pipelines:
             - npm install --silent --no-audit --no-optional
             # avoid CRA treating warnings as errors in CI
             - CI=false npm run build
+            - npm run test
           artifacts:
             - morrisons_store_finder/build/**
       - step:
